yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-and-morty-api-service
  namespace: rick-and-morty
spec:
  selector:
    app: rick-and-morty-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
