yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rick-and-morty-api-ingress
  namespace: rick-and-morty
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: rick-and-morty-api-service
            port: 
              number: 80
